--- a/milestone1/pom.xml
+++ b/milestone1/pom.xml
@@ -3,6 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>pt.ulisboa.tecnico</groupId>
   <artifactId>milestone1</artifactId>
+
+  <properties>
+    <java.version>1.8</java.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+  </properties>
+
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>milestone1</name>
@@ -15,4 +21,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <sourceDirectory>src/</sourceDirectory>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+	    			<artifactId>maven-compiler-plugin</artifactId>
+	    			<version>${maven-compiler-plugin.version}</version>
+	    			<configuration>
+	    				<source>${java.version}</source>
+	    				<target>${java.version}</target>
+	    			</configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
