--- a/milestone1/src/main/resources/application.properties
+++ b/milestone1/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/AppDB?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://mysqldb:3306/AppDB?autoReconnect=true&useSSL=false
 spring.datasource.username=appUser
 spring.datasource.password=appUser!
 spring.jpa.hibernate.ddl-auto=update
