Add Service Logic & Database init

--- a/milestone1/src/main/resources/application.properties
+++ b/milestone1/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.username=appUser
 spring.datasource.password=appUser!
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
+
+grid.value.min=0
+grid.value.max=50
+user.count=25
