--- a/milestone1/pom.xml
+++ b/milestone1/pom.xml
@@ -20,6 +20,12 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.bouncycastle</groupId>
+        <artifactId>bcprov-jdk15on</artifactId>
+        <version>1.64</version>
+     </dependency>
+	
   </dependencies>
 
   <build>
