--- a/milestone1/pom.xml
+++ b/milestone1/pom.xml
@@ -29,7 +29,6 @@
   </dependencies>
 
   <build>
-    <sourceDirectory>src/main</sourceDirectory>
 
     <plugins>
       <plugin>
@@ -41,6 +40,19 @@
 	    		<target>${java.version}</target>
 	    	</configuration>
       </plugin>
+	<plugin>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>exec-maven-plugin</artifactId>
+		<version>3.0.0</version>
+		<configuration>
+			<mainClass>pt.ulisboa.tecnico.App</mainClass>			
+
+
+		</configuration>
+		
+
+
+	</plugin>
     </plugins>
   </build>
 </project>
