--- a/milestone1/src/main/resources/application.yml
+++ b/milestone1/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/AppDB?autoReconnect=true&useSSL=false
+    url: jdbc:mysql://mysqldb:3306/AppDB?autoReconnect=true&useSSL=false
     username: appUser
     password: appUser!
   jpa:
